--- a/helm_chart/values.yaml
+++ b/helm_chart/values.yaml
@@ -9,6 +9,15 @@
 ## @param global.defaultStorageClass Global default StorageClass for Persistent Volume(s)
 ## @param global.storageClass DEPRECATED: use global.defaultStorageClass instead
 ##
+service:
+  type: LoadBalancer
+  port: 80
+  scheme: internet-facing
+  internalport: CONTAINER_PORT
+  #annotations:
+  #extraAnnotations:
+  phpmyadminPort: 80
+
 global:
   imageRegistry: ""
   ## E.g.
