--- a/helm_chart/templates/primary/svc.yaml
+++ b/helm_chart/templates/primary/svc.yaml
@@ -1,7 +1,7 @@
 {{- /*
-Copyright Broadcom, Inc. All Rights Reserved.
-SPDX-License-Identifier: APACHE-2.0
-*/}}
+  Copyright Broadcom, Inc. All Rights Reserved.
+  SPDX-License-Identifier: APACHE-2.0
+  */}}
 
 apiVersion: v1
 kind: Service
@@ -15,7 +15,7 @@ metadata:
   annotations: {{- include "common.tplvalues.render" ( dict "value" $annotations "context" $) | nindent 4 }}
   {{- end }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.primary.service.type }}
   {{- if and .Values.primary.service.clusterIP (eq .Values.primary.service.type "ClusterIP") }}
   clusterIP: {{ .Values.primary.service.clusterIP }}
   {{- end }}
