updated with latest jenkins changes

--- a/helm_chart/Chart.yaml
+++ b/helm_chart/Chart.yaml
@@ -30,7 +30,7 @@ keywords:
 maintainers:
 - name: Lazsa
   url: https://lazsa.calibo.com
-name: mysql
+name: #SERVICE_NAME#-mysql
 sources:
 - https://lazsa.calibo.com
 version: 11.1.15
